# rust_lab4

backend/: Cargo.toml
backend/src/: db.rs  handlers.rs  main.rs
frontend/: index.html  script.js  style.css
