[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
argon2 = { version = "0.5", features = ["password-hash"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.30"
uuid = "1.1"


